[project]
name = "mars_explorer"
version = "0.1.0"
description = "mars-explorer using crewAI"
authors = [{ name = "Helena Sanchez, Nuria Cardona, Laia Barcenilla and Natalia Munoz"}]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.165.1,<1.0.0",
    "requests>=2.0.0",
    "beautifulsoup4>=4.0.0",
    "pydantic>=2.0.0",
    "networkx>=3.0",
    "matplotlib>=3.7",
]

[project.scripts]
kickoff = "main:kickoff"
run_crew = "main:kickoff"
plot = "main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
